--- a/updates.html
+++ b/updates.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Updates - E-Cell IGDTUW</title>
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet" />
   <style>
@@ -116,37 +118,51 @@
       box-shadow: 0 8px 25px rgba(255,255,255,0.5);
     }
 
-    /* Animations */
     @keyframes fadeIn { 0% { opacity: 0; } 100% { opacity: 1; } }
     @keyframes slideDown { 0% { opacity: 0; transform: translateY(-50px);} 100% { opacity: 1; transform: translateY(0);} }
+
+    /* Navbar adjustments */
+    header nav a, header nav .cta {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 12px;
+      font-weight: 600;
+    }
+    header nav .cta {
+      background-color: #1e40af;
+      padding: 6px 14px;
+      border-radius: 6px;
+      transition: background 0.3s;
+    }
+    header nav .cta:hover { background-color: #2563eb; }
   </style>
 </head>
 <body>
 
-  <!-- Navbar -->
-  <div class="head-nav">
-    <div class="logo">
-      <img id="logo" src="logo.jpeg" />
-      <div id="logo-text">E-Cell</div>
-    </div>
-    <nav>
-      <span id="navbar-overlay">
-        <div class="container-nav">
-          <a class="navhead about-us" href="index.html">About Us</a>
-          <a class="navhead our-team" href="our-team.html">Our Team</a>
-          <a class="navhead past-events" href="events.html">Our Events</a>
-          <a class="navhead blogs" href="blogs.html">Blogs</a>
-          <a class="navhead gallery" href="gallery.html">Gallery</a>
-          <a class="navhead updates" href="updates.html">Updates</a>
-          <div class="contact-us">
-            <button class="button-contact" onclick="location.href='contact.html'">Contact Us</button>
-          </div>
+  <!-- Navbar from index.html -->
+  <header role="banner" class="bg-black">
+    <nav class="flex items-center justify-between p-4" aria-label="Primary">
+      <a class="flex items-center gap-3" href="index.html">
+        <img src="logo.jpeg" alt="E-Cell IGDTUW logo" class="w-12 h-12 rounded-full" />
+        <div>
+          <div class="text-xl font-bold text-white">E-Cell IGDTUW</div>
+          <div class="text-sm text-gray-300">Innovate • Create • Grow</div>
         </div>
-      </span>
-    </nav>
-  </div>
+      </a>
 
-  <!-- Recruitment Button with text -->
+      <div class="flex items-center gap-4">
+        <a href="index.html" class="nav-text">About</a>
+        <a href="events.html" class="nav-text">Events</a>
+        <a href="our-team.html" class="nav-text">Team</a>
+        <a href="blogs.html" class="nav-text">Blogs</a>
+        <a href="gallery.html" class="nav-text">Gallery</a>
+        <a href="updates.html" class="nav-text font-bold">Updates</a>
+        <a class="cta" href="contact.html">Contact Us</a>
+      </div>
+    </nav>
+  </header>
+
+  <!-- Recruitment Button -->
   <button class="recruit-btn" onclick="showRecruits()">
     <span>Recruitment Result</span>
   </button>
@@ -156,16 +172,14 @@
     <h2>New Recruits</h2>
     <div class="gallery-flex">
 
-      <!-- First row: Content + WebDev side by side -->
+      <!-- First row: Content + WebDev -->
       <div class="team-row">
-        <!-- Content Team -->
         <div class="team-group">
           <div class="team-name">Content Team</div>
           <div class="team-images">
             <img src="images/Content.jpg" alt="Content Team Member" />
           </div>
         </div>
-        <!-- WebDev Team -->
         <div class="team-group">
           <div class="team-name">WebDev Team</div>
           <div class="team-images">
@@ -222,13 +236,13 @@
           <img src="images/Sponsorship.jpg" alt="Sponsorship Team Member 2" />
         </div>
       </div>
+
+    </div>
   </section>
 
   <script>
     function showRecruits() {
-      // hide button
       document.querySelector('.recruit-btn').style.display = 'none';
-      // show recruit section
       const section = document.getElementById('recruit-section');
       section.style.display = 'block';
       section.scrollIntoView({ behavior: 'smooth' });
