--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
       <!-- Stat 1 -->
       <div>
         <h2 class="text-4xl font-extrabold text-white counter" data-target="1200">0</h2>
-        <p class="text-gray-300 mt-2 text-lg">Instagram Followers</p>
+        <p class="text-gray-300 mt-2 text-lg">Instagram Following</p>
       </div>
 
       <!-- Stat 2 -->
@@ -422,7 +422,7 @@
       </div>
     </section>
     <!-- Footer Section -->
-    <footer class="bg-[#0a1a12] text-gray-200 py-12 relative">
+    <footer class="bg-purple-600 text-gray-200 py-12 relative">
       <div class="max-w-7xl mx-auto px-6 md:px-12 grid grid-cols-1 md:grid-cols-4 gap-8">
 
         <!-- Contact -->
@@ -480,6 +480,8 @@
     </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <script src="index.js"></script>
 
 </body>
