--- a/blogs.html
+++ b/blogs.html
@@ -11,7 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Poppins:wght@400;600&family=Crimson+Text:wght@400;700&display=swap"
       rel="stylesheet"
     />
-
+<!-- Tailwind CSS -->
+<script src="https://cdn.tailwindcss.com"></script>
     <style>
       /* Global */
       html, body {
@@ -208,5 +209,8 @@
         drawer.classList.remove("open");
       });
     </script>
+
+
+
   </body>
 </html>
