--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,7 @@ h1, h2, h3 {
         text-align: center;
         box-shadow: 0 0 30px rgba(0, 0, 0, 0.7);
         overflow: hidden;
+        margin: auto;
       }
 
       /* translucent background image in center */
