--- a/index.html
+++ b/index.html
@@ -5,26 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>E-Cell IGDTUW</title>
+  <link rel="icon" type="image/png" href="logo.jpeg">
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Inter Font from Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800;900&display=swap" rel="stylesheet">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
-    rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-
-  <link
-    href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Fredericka+the+Great&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
-    rel="stylesheet" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Fredericka+the+Great&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Rye&display=swap"
-    rel="stylesheet" />
-
   <!-- GSAP for advanced animations -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
@@ -125,7 +108,7 @@
     Explore Events
   </a>
   <a class="btn px-6 py-3 rounded-full border border-white text-white font-bold hover:bg-white hover:text-black transition"
-    href="https://chat.whatsapp.com/your-group-invite-code" 
+    href="https://chat.whatsapp.com/LyUgaqkkSHT0hbmRVMJwcg" 
     target="_blank" 
     rel="noopener noreferrer">
     Connect with us
@@ -136,28 +119,75 @@
 
 
 
-      <!-- About -->
-      <section id="about">
-        <h2 class="section-title">About E-Cell</h2>
-        <p class="muted">E-Cell IGDTUW is a student-led initiative that nurtures innovation, creativity, and entrepreneurship on campus. We provide a platform for students to explore ideas, gain mentorship, and build impactful solutions that drive positive change.</p>
-        <div class="cards" style="margin-top:18px">
-          <article class="card">
-            <div class="chip">🎯 Our Aim</div>
-            <h3>We aim to be the guiding light that illuminates their path to success, inspiring them to embark on their entrepreneurial ventures with confidence and determination. Our vision is to see our students not just excel academically but to become trailblazers in their respective fields, leading innovative initiatives and ventures that make a positive and lasting impact on society.</h3>
-            <!-- <p>Project-first initiatives that help you prototype, validate, and iterate.</p> -->
-          </article>
-          <article class="card">
-            <div class="chip">👀 Our Vision</div>
-            <h3>E-Cell envisions the creation of a vibrant community of zealous individuals, all sharing a common passion for entrepreneurship. We aspire to be the catalyst that ignites the entrepreneurial spirit within the students of various branches in our university, right from the early stages of their college journey. Our vision is to introduce them to the rapidly evolving world of entrepreneurship and provide them with opportunities to explore diverse entrepreneurial fields.</h3>
-            <!-- <p>Meet founders, engineers, designers, and mentors who’ve been there.</p> -->
-          </article>
-          <article class="card">
-            <div class="chip">🚀 Our Goal</div>
-            <h3>The goal of the Entrepreneurship Cell (E-Cell) at Indira Gandhi Delhi Technical University for Women (IGDTUW) is to foster an entrepreneurial mindset by equipping students with essential skills in innovation, leadership, and problem-solving. To provide a supportive platform that broadens perspectives, encourages creative thinking, and empowers students to transform ideas into impactful ventures that shape the future.</h3>
-            <!-- <p>Showcase your work in college-wide demos, fests, and partner events.</p> -->
-          </article>
-        </div>
-      </section>
+    <!-- About -->
+<section id="about" class="py-16 bg-black text-white">
+  <h2 class="section-title text-center text-3xl font-bold text-white">
+    About E-Cell
+  </h2>
+
+  <p class="muted text-center max-w-3xl mx-auto mt-4 text-lg leading-relaxed text-gray-300">
+    E-Cell IGDTUW is a student-led initiative that nurtures innovation, creativity, and entrepreneurship on campus. 
+    We provide a dynamic platform where students can explore groundbreaking ideas, gain mentorship from industry experts, 
+    and collaborate with like-minded peers. By fostering leadership and problem-solving skills, we empower students 
+    to build impactful solutions that drive positive change in society and prepare them to be future innovators and changemakers.
+  </p>
+
+  <div class="cards grid md:grid-cols-3 gap-6 mt-12">
+    <!-- 🎯 Our Aim -->
+    <article class="card p-6 shadow-lg rounded-2xl bg-gray-900 hover:bg-gray-800 transition">
+      <div class="chip flex items-center gap-2 mb-3 text-indigo-400 font-semibold">
+        <!-- Target Icon -->
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-indigo-400" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+          <circle cx="12" cy="12" r="10"/>
+          <circle cx="12" cy="12" r="6"/>
+          <circle cx="12" cy="12" r="2"/>
+        </svg>
+        <span>Our Aim</span>
+      </div>
+      <h3 class="text-gray-300 leading-relaxed">
+        We aim to be the guiding light that illuminates their path to success, inspiring them to embark on their entrepreneurial ventures with confidence and determination. 
+        Our vision is to see our students not just excel academically but to become trailblazers in their respective fields, leading innovative initiatives and ventures that make a positive and lasting impact on society.
+      </h3>
+    </article>
+
+    <!-- 👀 Our Vision -->
+    <article class="card p-6 shadow-lg rounded-2xl bg-gray-900 hover:bg-gray-800 transition">
+      <div class="chip flex items-center gap-2 mb-3 text-indigo-400 font-semibold">
+        <!-- Eye Icon -->
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-indigo-400" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+          <path d="M1.5 12s4.5-7.5 10.5-7.5S22.5 12 22.5 12s-4.5 7.5-10.5 7.5S1.5 12 1.5 12z"/>
+          <circle cx="12" cy="12" r="3"/>
+        </svg>
+        <span>Our Vision</span>
+      </div>
+      <h3 class="text-gray-300 leading-relaxed">
+        E-Cell envisions the creation of a vibrant community of zealous individuals, all sharing a common passion for entrepreneurship. 
+        We aspire to be the catalyst that ignites the entrepreneurial spirit within the students of various branches in our university, right from the early stages of their college journey. 
+        Our vision is to introduce them to the rapidly evolving world of entrepreneurship and provide them with opportunities to explore diverse entrepreneurial fields.
+      </h3>
+    </article>
+
+    <!-- 🚀 Our Goal -->
+    <article class="card p-6 shadow-lg rounded-2xl bg-gray-900 hover:bg-gray-800 transition">
+      <div class="chip flex items-center gap-2 mb-3 text-indigo-400 font-semibold">
+        <!-- Rocket Icon -->
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-indigo-400" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+          <path d="M5 15a7 7 0 0114 0v4H5v-4z"/>
+          <path d="M9 19v2m6-2v2"/>
+          <path d="M12 3a9 9 0 00-9 9c0 2.7 1.2 5.1 3 6.7V21h12v-2.3c1.8-1.6 3-4 3-6.7a9 9 0 00-9-9z"/>
+        </svg>
+        <span>Our Goal</span>
+      </div>
+      <h3 class="text-gray-300 leading-relaxed">
+        The goal of the Entrepreneurship Cell (E-Cell) at Indira Gandhi Delhi Technical University for Women (IGDTUW) 
+        is to foster an entrepreneurial mindset by equipping students with essential skills in innovation, leadership, and problem-solving. 
+        To provide a supportive platform that broadens perspectives, encourages creative thinking, and empowers students to transform ideas into impactful ventures that shape the future.
+      </h3>
+    </article>
+  </div>
+</section>
+
+
 
   </div>
 
@@ -172,7 +202,7 @@
       <!-- Stat 1 -->
       <div>
         <h2 class="text-4xl font-extrabold text-white counter" data-target="2000">0</h2>
-        <p class="text-gray-300 mt-2 text-lg">Instagram Following</p>
+        <p class="text-gray-300 mt-2 text-lg">Following</p>
       </div>
 
       <!-- Stat 2 -->
@@ -355,11 +385,10 @@
     <div>
       <h3 class="text-lg font-semibold mb-4">ECell IGDTUW</h3>
       <ul class="space-y-2">
-        <li><a href="#" class="hover:text-pink-400 transition">About Us</a></li>
-        <li><a href="#" class="hover:text-pink-400 transition">Careers</a></li>
-        <li><a href="#" class="hover:text-pink-400 transition">Blog</a></li>
-        <li><a href="#" class="hover:text-pink-400 transition">Contact</a></li>
-      </ul>
+       <li><a href="#about" class="hover:text-pink-400 transition">About Us</a></li>
+     <li><a href="updates.html" class="hover:text-pink-400 transition">Updates</a></li>
+    <li><a href="blogs.html" class="hover:text-pink-400 transition">Blog</a></li>
+    <li><a href="contact.html" class="hover:text-pink-400 transition">Contact</a></li>
     </div>
 
     <!-- Services -->
@@ -388,7 +417,7 @@
           <br>
         <p>+91 98765 43210</p>
           <br>
-          <p><span class="gmail com">ecelligdtuw@gmail.com</span></p>
+          <p><span class="gmail com">Ecell.igdtu@gmail.com</span></p>
         
       </div>
     </div>
