--- a/gallery.html
+++ b/gallery.html
@@ -6,9 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gallery - E-Cell IGDTUW</title>
 
-  <!-- Main CSS -->
-  <link rel="stylesheet" href="styles.css" />
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800;900&display=swap" rel="stylesheet" />
 
@@ -16,7 +13,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 
   <style>
-    /* =========================== Navbar Styling for E-Cell =========================== */
+    /* =========================== Navbar Styling =========================== */
     body {
       margin: 0;
       padding: 0;
@@ -187,78 +184,63 @@
       .menu-btn {
         display: flex;
       }
-
-      .links {
-        display: flex;
-        align-items: center;
-        gap: 28px;
-        margin-left: 20px;
-      }
     }
 
-    @media (max-width: 768px) {
-      .menu-btn {
-        flex-direction: column;
-        justify-content: space-between;
-        width: 24px;
-        height: 18px;
-      }
-
-      .drawer {
-        right: -100%;
-        width: 70%;
-        height: 100vh;
-        padding: 4rem 2rem;
-      }
-
-      .drawer.open {
-        right: 0;
-      }
+    /* =========================== Gallery Styling =========================== */
+    .gallery {
+      padding: 2rem 1rem;
     }
 
     .gallery-flex {
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: 1fr 1.6fr 1fr; /* Middle column bigger */
       gap: 1rem;
-      padding: 2rem;
+    }
+
+    .gallery-flex .column {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
     }
 
     .gallery-flex .item img {
       width: 100%;
-      height: auto;
       border-radius: 8px;
       object-fit: cover;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      cursor: pointer;
     }
 
-    @media (max-width: 768px) {
+    .gallery-flex .item img:hover {
+      transform: scale(1.05);
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
+    }
+
+    /* Tablet */
+    @media (max-width: 1024px) {
       .gallery-flex {
         grid-template-columns: 1fr 1fr;
-        gap: 1rem;
-        padding: 1rem;
       }
-
-      .gallery-flex .column {
-        display: contents;
-      }
-
-      .gallery img {
-        width: 100%;
-        height: auto;
-        border-radius: 8px;
-        object-fit: cover;
+      .column.middle {
+        order: 1;
       }
     }
 
-    @media (max-width: 480px) {
+    /* Mobile */
+    @media (max-width: 640px) {
       .gallery-flex {
         grid-template-columns: 1fr;
+      }
+      .column.middle,
+      .column.left,
+      .column.right {
+        order: initial;
       }
     }
   </style>
 </head>
 
 <body>
-
   <!-- Navbar -->
   <div class="site-navbar">
     <header role="banner">
@@ -307,135 +289,61 @@
   <!-- Gallery Section -->
   <section class="gallery">
     <div class="gallery-flex">
+      <!-- Left Column -->
       <div class="column left">
-        <div class="item"><img src="https://i.postimg.cc/Gpwd4vHP/15.jpg" alt="" /></div>
-        <div class="item"><img src="images/drishtiias/1000074475.jpg" alt="" /></div>
-        <div class="item"><img src="https://i.postimg.cc/W3Q91yq7/9.jpg" alt="" /></div>
-        <div class="item"><img src="https://i.postimg.cc/PJJ2Kjsh/11.jpg" alt="" /></div>
-        <div class="item"><img src="https://i.postimg.cc/prd0HLPx/17.jpg" alt="" /></div>
-        <div class="item"><img src="https://i.postimg.cc/sDhYZh6q/19.jpg" alt="" /></div>
-        <div class="item"><img src="https://i.postimg.cc/TPGnv3V2/IMG-9233.avif" alt="" /></div>
-        <div class="item"><img src="images/gallery/gallery1.jpg" alt="" /></div>
-        <div class="item"><img src="images/gallery/gallery2.jpg" alt="" /></div>
+        <div class="item"><img src="https://i.postimg.cc/Gpwd4vHP/15.jpg" alt="Gallery Image" /></div>
+        <div class="item"><img src="images/drishtiias/1000074475.jpg" alt="Gallery Image" /></div>
+        <div class="item"><img src="https://i.postimg.cc/W3Q91yq7/9.jpg" alt="Gallery Image" /></div>
+        <div class="item"><img src="https://i.postimg.cc/PJJ2Kjsh/11.jpg" alt="Gallery Image" /></div>
+        <div class="item"><img src="https://i.postimg.cc/prd0HLPx/17.jpg" alt="Gallery Image" /></div>
       </div>
 
+      <!-- Middle Column (Wider) -->
       <div class="column middle">
-        <div class="item"><img src="https://i.postimg.cc/L63xqwxs/Scanned-20250828-1901-08.jpg" alt="" /></div>
-        <div class="item"><img src="images/caseconq/caseconq1.jpg" alt="" /></div>
-        <div class="item"><img src="https://i.postimg.cc/m2CdbMWW/14.jpg" alt="" /></div>
-        <div class="item"><img src="https://i.postimg.cc/3w4YRn8x/12.jpg" alt="" /></div>
-        <div class="item"><img src="https://i.postimg.cc/Qd00TCWC/10.jpg" alt="" /></div>
-        <div class="item"><img src="https://i.postimg.cc/QdvvJ1h7/16.jpg" alt="" /></div>
-     
+        <div class="item"><img src="https://i.postimg.cc/L63xqwxs/Scanned-20250828-1901-08.jpg" alt="Gallery Image" /></div>
+        <div class="item"><img src="images/caseconq/caseconq1.jpg" alt="Gallery Image" /></div>
+        <div class="item"><img src="https://i.postimg.cc/m2CdbMWW/14.jpg" alt="Gallery Image" /></div>
+        <div class="item"><img src="https://i.postimg.cc/3w4YRn8x/12.jpg" alt="Gallery Image" /></div>
+        <div class="item"><img src="https://i.postimg.cc/Qd00TCWC/10.jpg" alt="Gallery Image" /></div>
       </div>
 
+      <!-- Right Column -->
       <div class="column right">
-        <div class="item"><img src="https://i.postimg.cc/4x20FcWK/5.jpg" alt="" /></div>
-        <div class="item"><img src="https://i.postimg.cc/8cPpmWyy/7.jpg" alt="" /></div>
-        <div class="item"><img src="images/drishtiias/1000074428.jpg" alt="" /></div>
-        <div class="item"><img src="https://i.postimg.cc/GpxFNxpd/3.jpg" alt="" /></div>
-        <div class="item"><img src="https://i.postimg.cc/ydpm0Xz4/18.jpg" alt="" /></div>
-        <div class="item"><img src="https://i.postimg.cc/QxT8ggRw/IMG-20250828-WA0052.jpg" alt="" /></div>
-        <div class="item"><img src="https://i.postimg.cc/9F0h1dsC/IMG-9223.avif" alt="" /></div>
-        <div class="item"><img src="images/gallery/gallery3.jpg" alt="" /></div>
-        <div class="item"><img src="images/gallery/gallery4.jpg" alt="" /></div>
+        <div class="item"><img src="https://i.postimg.cc/4x20FcWK/5.jpg" alt="Gallery Image" /></div>
+        <div class="item"><img src="https://i.postimg.cc/8cPpmWyy/7.jpg" alt="Gallery Image" /></div>
+        <div class="item"><img src="images/drishtiias/1000074428.jpg" alt="Gallery Image" /></div>
+        <div class="item"><img src="https://i.postimg.cc/GpxFNxpd/3.jpg" alt="Gallery Image" /></div>
+        <div class="item"><img src="https://i.postimg.cc/ydpm0Xz4/18.jpg" alt="Gallery Image" /></div>
       </div>
     </div>
   </section>
 
- <!-- JS -->
-<script src="script.js"></script>
+  <!-- JS for Drawer -->
+  <script>
+    const menuBtn = document.getElementById('menuBtn');
+    const drawer = document.getElementById('drawer');
+    const closeDrawer = document.getElementById('closeDrawer');
 
-<script>
-  // Select hamburger and drawer
-  const menuBtn = document.getElementById('menuBtn');
-  const drawer = document.getElementById('drawer');
-  const closeDrawer = document.getElementById('closeDrawer');
+    menuBtn.addEventListener('click', () => {
+      drawer.classList.add('open');
+      drawer.setAttribute('aria-hidden', 'false');
+      menuBtn.setAttribute('aria-expanded', 'true');
+    });
 
-  // Open drawer
-  menuBtn.addEventListener('click', () => {
-    drawer.classList.add('open');
-    drawer.setAttribute('aria-hidden', 'false');
-    menuBtn.setAttribute('aria-expanded', 'true');
-  });
-
-  // Close drawer
-  closeDrawer.addEventListener('click', () => {
-    drawer.classList.remove('open');
-    drawer.setAttribute('aria-hidden', 'true');
-    menuBtn.setAttribute('aria-expanded', 'false');
-  });
-
-  // Close drawer when clicking outside
-  window.addEventListener('click', (e) => {
-    if (drawer.classList.contains('open') && !drawer.contains(e.target) && e.target !== menuBtn) {
+    closeDrawer.addEventListener('click', () => {
       drawer.classList.remove('open');
       drawer.setAttribute('aria-hidden', 'true');
       menuBtn.setAttribute('aria-expanded', 'false');
-    }
-  });
-</script>
+    });
 
-
-
-  <!-- Footer Section -->
-  <footer class="bg-gray-900 text-gray-500 py-12 relative">
-    <div class="max-w-7xl mx-auto px-6 md:px-12 grid grid-cols-1 md:grid-cols-4 gap-8">
-      <div>
-        <h3 class="text-lg font-semibold mb-4">Location</h3>
-        <div class="flex flex-col space-y-4">
-          <div class="w-full h-40 rounded-lg overflow-hidden shadow-lg">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.3386164064586!2d77.229433!3d28.6655361!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd0683919c3b%3A0xf5fc331b74c2b9e2!2sIndira%20Gandhi%20Delhi%20Technical%20University%20for%20Women!5e0!3m2!1sen!2sin!4v1694000000000!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-          </div>
-          <div>
-            <p>Indira Gandhi Delhi Technical University For Women, Kashmere Gate, New Delhi, India</p>
-          </div>
-        </div>
-      </div>
-
-      <div>
-        <h3 class="text-lg font-semibold mb-4">ECell IGDTUW</h3>
-        <ul class="space-y-2">
-          <li><a href="index.html" class="hover:text-pink-400 transition">About Us</a></li>
-          <li><a href="updates.html" class="hover:text-pink-400 transition">Updates</a></li>
-          <li><a href="blogs.html" class="hover:text-pink-400 transition">Blog</a></li>
-          <li><a href="contact.html" class="hover:text-pink-400 transition">Contact</a></li>
-        </ul>
-      </div>
-
-      <div>
-        <h3 class="text-lg font-semibold mb-4">Services</h3>
-        <ul class="space-y-2">
-          <li><a href="#" class="hover:text-pink-400 transition">Hackathons</a></li>
-          <li><a href="#" class="hover:text-pink-400 transition">Insightful Sessions</a></li>
-          <li><a href="#" class="hover:text-pink-400 transition">Events</a></li>
-          <li><a href="#" class="hover:text-pink-400 transition">Funding Ideas</a></li>
-        </ul>
-      </div>
-
-      <div>
-        <h3 class="text-lg font-semibold mb-4">Follow Us</h3>
-        <div class="flex space-x-4 mb-4">
-          <a href="#" class="hover:text-pink-400"><i class="fab fa-linkedin-in"></i></a>
-          <a href="#" class="hover:text-pink-400"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="hover:text-pink-400"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="hover:text-pink-400"><i class="fab fa-x-twitter"></i></a>
-        </div>
-        <div class="mt-4">
-          <a href="https://www.instagram.com/ecell.igdtuw/" class="hover:text-pink-400 transition">Instagram</a>
-          <br><br>
-          <p>+919810823235</p>
-          <br>
-          <p><span class="gmail com">Ecell.igdtu@gmail.com</span></p>
-        </div>
-      </div>
-    </div>
-
-    <div class="mt-12 border-t border-gray-700 pt-6 text-center text-sm text-gray-500">
-      © 2025 ECell IGDTUW. All rights reserved.
-    </div>
-  </footer>
+    window.addEventListener('click', (e) => {
+      if (drawer.classList.contains('open') && !drawer.contains(e.target) && e.target !== menuBtn) {
+        drawer.classList.remove('open');
+        drawer.setAttribute('aria-hidden', 'true');
+        menuBtn.setAttribute('aria-expanded', 'false');
+      }
+    });
+  </script>
 </body>
 
 </html>
